# dill_bot

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  dev_setup.sh  docker-compose.yml  install_dependencies.sh  pyproject.toml  requirements.txt
.github/workflows/: Linter.yml  main.yml
src/: bot.py
src/cogs/: admin.py  dice.py  music.py  tts.py
