[tool.poetry]
name = "dill-bot"
version = "0.1.0"
description = "Discord bot for Dill Do server"
authors = ["ayricky <marianoricardo97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["voice"], version = "^2.2.2"}
elevenlabslib = "^0.4.2"
python-dotenv = "^1.0.0"
youtube-dl = "^2021.12.17"
requests = "^2.28.2"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[flake8]
ignore = ['E501']
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist
